--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   "devDependencies": {
     "browserify": "~4.1.10",
     "browserify-shim": "~3.5.0",
+    "chai": "~1.9.1",
     "karma": "~0.12.16",
     "karma-bro": "~0.5.0",
+    "karma-chai-sinon": "~0.1.3",
     "karma-mocha": "~0.1.4",
     "karma-phantomjs-launcher": "~0.1.4",
     "mocha": "~1.20.1",
+    "sinon": "~1.10.2",
+    "sinon-chai": "~2.5.0",
     "watchify": "~0.10.2"
   },
   "browserify-shim": {
