--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "karma": "~0.12.16",
     "karma-bro": "~0.5.0",
     "karma-chai-sinon": "~0.1.3",
+    "karma-cli": "0.0.4",
     "karma-mocha": "~0.1.4",
     "karma-phantomjs-launcher": "~0.1.4",
     "mocha": "~1.20.1",
