--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-form-state",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Smarter AngularJS forms for reacting to submission states",
   "main": "./src/module.js",
   "scripts": {
@@ -35,6 +35,9 @@
     "sinon": "~1.10.2",
     "sinon-chai": "~2.5.0",
     "watchify": "~0.10.2"
+  },
+  "browserify": {
+    "transform": ["browserify-shim"]
   },
   "browserify-shim": {
     "angular": "global:angular"
