--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "browserify-shim": "3",
     "chai": "1",
     "karma": "0.12",
-    "karma-bro": "0.8",
+    "karma-browserify": "^1.0.0",
     "karma-chai-sinon": "0.1",
     "karma-cli": "0.0.4",
     "karma-mocha": "0.1",
