--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
   },
   "homepage": "https://github.com/bendrucker/angular-form-state",
   "devDependencies": {
+    "angular-mocks": "~1.3.3",
     "browserify": "6",
     "browserify-bower-release": "2",
     "browserify-shim": "3",
     "chai": "1",
     "karma": "0.12",
     "karma-browserify": "^1.0.0",
-    "karma-chai-sinon": "0.1",
     "karma-cli": "0.0.4",
     "karma-mocha": "0.1",
     "karma-phantomjs-launcher": "0.1",
     "mocha": "1",
     "sinon": "1",
+    "sinon-as-promised": "~1.4.1",
     "sinon-chai": "2"
   },
   "browserify": {
@@ -44,5 +45,8 @@
   },
   "browserify-shim": {
     "angular": "global:angular"
+  },
+  "dependencies": {
+    "angular": "~1.3.3"
   }
 }
