--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Ben Drucker <bvdrucker@gmail.com>"
   ],
   "description": "Smarter AngularJS forms for reacting to submission states",
-  "main": "index.js",
+  "main": "./release/angular-form-state.js",
   "moduleType": [
     "node"
   ],
@@ -22,11 +22,5 @@
     "components",
     "test",
     "tests"
-  ],
-  "devDependencies": {
-    "angular-mocks": "~1.2.18"
-  },
-  "dependencies": {
-    "angular": "~1.2.18"
-  }
+  ]
 }
