--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "angular-mocks": "~1.3.3",
     "browserify": "6",
-    "browserify-bower-release": "2",
+    "browserify-bower-release": "~2.1.0",
     "browserify-shim": "3",
     "chai": "1",
     "karma": "0.12",
