--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-form-state",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Smarter AngularJS forms for reacting to submission states",
   "main": "./src",
   "scripts": {
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/bendrucker/angular-form-state",
   "devDependencies": {
     "angular-mocks": "~1.3.3",
-    "browserify": "6",
+    "browserify": "8.1.1",
     "browserify-bower-release": "~2.1.0",
     "browserify-shim": "3",
     "chai": "1",
@@ -34,6 +34,7 @@
     "karma-mocha": "0.1",
     "karma-phantomjs-launcher": "0.1",
     "mocha": "1",
+    "publicist": "git://github.com/bendrucker/publicist#v3",
     "sinon": "1",
     "sinon-as-promised": "~1.4.1",
     "sinon-chai": "2"
