--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-form-state",
-  "version": "1.1.10",
+  "version": "1.1.11",
   "description": "Smarter AngularJS forms for reacting to submission states",
   "main": "./src",
   "scripts": {
@@ -24,9 +24,6 @@
   "homepage": "https://github.com/bendrucker/angular-form-state",
   "devDependencies": {
     "angular-mocks": "~1.3.3",
-    "browserify": "8.1.1",
-    "browserify-bower-release": "~2.1.0",
-    "browserify-shim": "3",
     "chai": "1",
     "karma": "0.12",
     "karma-browserify": "^1.0.0",
@@ -48,6 +45,7 @@
     "angular": "global:angular"
   },
   "dependencies": {
-    "angular": "~1.3.3"
+    "angular": "~1.3.3",
+    "browserify-shim": "~3.8.2"
   }
 }
