--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-form-state",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Smarter AngularJS forms for reacting to submission states",
   "main": "./src",
   "scripts": {
@@ -24,8 +24,6 @@
   "homepage": "https://github.com/bendrucker/angular-form-state",
   "devDependencies": {
     "angular-mocks": "~1.3.3",
-    "browserify": "6",
-    "browserify-bower-release": "~2.1.0",
     "browserify-shim": "3",
     "chai": "1",
     "karma": "0.12",
@@ -47,6 +45,7 @@
     "angular": "global:angular"
   },
   "dependencies": {
-    "angular": "~1.3.3"
+    "angular": "~1.3.3",
+    "publicist": "git://github.com/bendrucker/publicist#v3"
   }
 }
