--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "url": "https://github.com/bendrucker/angular-form-state/issues"
   },
   "homepage": "https://github.com/bendrucker/angular-form-state",
+  "peerDependencies": {
+    "angular": ">= 1.3 <= 1.5"
+  },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
     "browserify-shim": "3",
@@ -44,8 +47,5 @@
   },
   "browserify-shim": {
     "angular": "global:angular"
-  },
-  "dependencies": {
-    "angular": "~1.3.3"
   }
 }
