--- a/package.json
+++ b/package.json
@@ -26,26 +26,19 @@
     "angular": ">= 1.3 <= 1.5"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.3",
+    "angular": "~1.4.3",
+    "angular-mocks": "~1.4.3",
     "browserify-shim": "3",
-    "chai": "1",
+    "chai": "~3.0.0",
     "karma": "0.12",
     "karma-browserify": "^1.0.0",
     "karma-cli": "0.0.4",
     "karma-mocha": "0.1",
     "karma-phantomjs-launcher": "0.1",
     "mocha": "1",
-    "sinon": "1",
-    "sinon-as-promised": "~2.0.3",
-    "sinon-chai": "2",
+    "sinon": "~1.15.4",
+    "sinon-as-promised": "~4.0.0",
+    "sinon-chai": "~2.8.0",
     "standard": "~4.5.4"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "angular": "global:angular"
   }
 }
