--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src",
   "scripts": {
     "test": "standard && zuul --phantom -- test/index.js",
-    "release": "release release"
+    "umd": "browserify -e . -s angularFormState -t [exposify --expose [ --angular=angular ] ] -p derequire/plugin > ./release/angular-form-state.js",
+    "preversion": "npm run umd && git add -A ../release/* && git commit -m 'UMD Build'"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,10 @@
   "devDependencies": {
     "angular": "~1.4.3",
     "angular-mocks": "~1.4.3",
+    "browserify": "~10.2.6",
     "chai": "~3.0.0",
+    "derequire": "~2.0.0",
+    "exposify": "~0.4.3",
     "mocha": "~2.2.5",
     "phantomjs": "~1.9.17",
     "sinon": "~1.15.4",
