--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src",
   "scripts": {
     "test": "standard && zuul --phantom -- test/index.js",
-    "umd": "browserify -e . -s angularFormState -t [exposify --expose [ --angular=angular ] ] -p derequire/plugin > ./release/angular-form-state.js",
+    "umd": "EXPOSIFY_CONFIG='{\"angular\": \"angular\"}' browserify -e . -s angularFormState -t exposify -p derequire/plugin > ./release/angular-form-state.js",
     "preversion": "npm run umd && git add -A ../release/* && git commit -m 'UMD Build'"
   },
   "repository": {
