--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "standard && zuul --phantom -- test/index.js",
     "umd": "EXPOSIFY_CONFIG='{\"angular\": \"angular\"}' browserify -e . -s angularFormState -t exposify -p derequire/plugin > ./release/angular-form-state.js",
-    "preversion": "npm run umd && git add -A ../release/* && git commit -m 'UMD Build'"
+    "preversion": "npm run umd && git add -A release/* && git commit -m 'UMD Build'"
   },
   "repository": {
     "type": "git",
